_build/include/qmckl.h

/* /home/runner/work/qmckl/qmckl/_build/src/qmckl_context_type.h */
/* Context handling */

/*   The context is the central data structure in QMCkl, serving as a handle */
/*   for the complete state of the library. All QMCkl functions require a context */
/*   as their first argument, and all computed data is stored within the context. */
  
/*   The context variable is a handle for the state of the library, and is stored  */
/*   in a data structure which can't be seen outside of the library. This  */
/*   encapsulation provides a clean API boundary and allows internal implementation  */
/*   details to change without affecting user code. */
  
/*   To simplify compatibility with other languages (particularly Fortran), the */
/*   pointer to the internal data structure is converted into a 64-bit */
/*   signed integer, defined in the ~qmckl_context~ type. This approach avoids */
/*   issues with language interoperability related to opaque pointer types. */
/*   A value of ~QMCKL_NULL_CONTEXT~ for the context is equivalent to a */
/*   ~NULL~ pointer and represents an invalid or uninitialized context. */

/*   #+NAME: qmckl_context */

typedef int64_t qmckl_context ;
/* /home/runner/work/qmckl/qmckl/_build/src/qmckl_error_type.h */
/* Exit codes */

/*    All the functions in the QMCkl library return with an exit code, defined as */
/*    #+NAME: type-exit-code */

typedef int32_t qmckl_exit_code;
/* /home/runner/work/qmckl/qmckl/_build/src/qmckl_error_func.h */
/* Decoding errors */

/*    To facilitate debugging and error reporting, QMCkl provides the  */
/*    ~qmckl_string_of_error~ function which converts an error code into  */
/*    a descriptive string. This allows applications to present meaningful  */
/*    error messages to users or write detailed logs for troubleshooting. */
   
/*    The function takes an error code as input and returns a constant string */
/*    describing the error condition. Both C and Fortran interfaces are provided */
/*    for maximum compatibility. */


const char*
qmckl_string_of_error (const qmckl_exit_code error);
/* Last error */

/*   Returns a string describing the last error, using ~qmckl_get_error~. */

/*   # Header */

qmckl_exit_code
qmckl_last_error(qmckl_context context, char* buffer);
/* Helper functions for debugging */

/*   The following function prints to ~stderr~ an error message is the return code is */
/*   not ~QMCKL_SUCCESS~. */

/*   # Header */

qmckl_exit_code
qmckl_check(qmckl_context context, qmckl_exit_code rc);
/* Initialization functions */

/*    To set the data relative to the electrons in the context, the */
/*    following functions need to be called. When the data structure is */
/*    initialized, the internal ~coord_new~ and ~coord_old~ arrays are */
/*    both not allocated. */


qmckl_exit_code qmckl_set_electron_num      (qmckl_context context, const int64_t up_num, const int64_t down_num);
qmckl_exit_code qmckl_set_electron_coord    (qmckl_context context, const char transp, const int64_t walk_num, const double* coord, const int64_t size_max);
/* Electron coordinates */

/*     Returns the current electron coordinates. The pointer is assumed */
/*     to point on a memory block of size ~size_max~ \ge ~3 * elec_num * walker.num~. */
/*     The order of the indices is: */

/*     |         | Normal                     | Transposed                 | */
/*     |---------+----------------------------+----------------------------| */
/*     | C       | ~[walker.num*elec_num][3]~ | ~[3][walker.num*elec_num]~ | */
/*     | Fortran | ~(3,walker.num*elec_num)~  | ~(walker.num*elec_num, 3)~ | */



qmckl_exit_code
qmckl_get_electron_coord (const qmckl_context context,
                          const char transp,
                          double* const coord,
                          const int64_t size_max);
/* Get */


qmckl_exit_code
qmckl_get_electron_ee_distance(qmckl_context context,
                               double* const distance,
                               const int64_t size_max);
/* Get */


qmckl_exit_code
qmckl_get_electron_en_distance(qmckl_context context,
                               double* const distance,
                               const int64_t size_max);
/* C header */

/*     #+CALL: generate_c_header(table=qmckl_distance_rescaled_args,rettyp=get_value("CRetType"),fname=get_value("Name")) */

/*     #+RESULTS: */

qmckl_exit_code qmckl_distance_rescaled (
      const qmckl_context context,
      const char transa,
      const char transb,
      const int64_t m,
      const int64_t n,
      const double* A,
      const int64_t lda,
      const double* B,
      const int64_t ldb,
      double* const C,
      const int64_t ldc,
      const double rescale_factor_kappa );
/* ~qmckl_distance_rescaled_gl~ */
/*    :PROPERTIES: */
/*    :Name:     qmckl_distance_rescaled_gl */
/*    :CRetType: qmckl_exit_code */
/*    :FRetType: qmckl_exit_code */
/*    :END: */

/*    ~qmckl_distance_rescaled_gl~ computes the matrix of the gradient and Laplacian of the */
/*    rescaled distance with respect to the electron coordinates. The derivative is a rank 3 tensor. */
/*    The first dimension has a dimension of 4 of which the first three coordinates */
/*    contains the gradient vector and the last index is the Laplacian. */


/*    \[ */
/*    C(r_{ij}) = \left( 1 - \exp(-\kappa\, r_{ij})\right)/\kappa */
/*    \] */

/*    Here the gradient is defined as follows: */

/*    \[ */
/*    \nabla_i C(r_{ij}) = \left(\frac{\partial C(r_{ij})}{\partial x_i},\frac{\partial C(r_{ij})}{\partial y_i},\frac{\partial C(r_{ij})}{\partial z_i} \right) */
/*    \] */
/*    and the Laplacian is defined as follows: */

/*    \[ */
/*    \Delta_i C(r_{ij}) = \frac{\partial^2}{\partial x_i^2} + \frac{\partial^2}{\partial y_i^2} + \frac{\partial^2}{\partial z_i^2} */
/*    \] */

/*    Using the above three formulas, the expression for the gradient and Laplacian is: */

/*    \[ */
/*    \frac{\partial  C(r_{ij})}{\partial x_i} = \frac{|(x_i - */
/*    x_j)|}{r_{ij}} \exp (- \kappa \, r_{ij}) */
/*    \] */

/*    \[ */
/*    \Delta C_{ij}(r_{ij}) = \left[ \frac{2}{r_{ij}} - \kappa  \right] \exp (- \kappa \, r_{ij}) */
/*    \] */

/*    If the input array is normal (~'N'~), the xyz coordinates are in */
/*    the leading dimension: ~[n][3]~ in C and ~(3,n)~ in Fortran. */

/*    #+NAME: qmckl_distance_rescaled_gl_args */
/*    | Variable               | Type                | In/Out | Description                                           | */
/*    |------------------------+---------------------+--------+-------------------------------------------------------| */
/*    | ~context~              | ~qmckl_context~     | in     | Global state                                          | */
/*    | ~transa~               | ~char~              | in     | Array ~A~ is ~'N'~: Normal, ~'T'~: Transposed         | */
/*    | ~transb~               | ~char~              | in     | Array ~B~ is ~'N'~: Normal, ~'T'~: Transposed         | */
/*    | ~m~                    | ~int64_t~           | in     | Number of points in the first set                     | */
/*    | ~n~                    | ~int64_t~           | in     | Number of points in the second set                    | */
/*    | ~A~                    | ~double[][lda]~     | in     | Array containing the $m \times 3$ matrix $A$          | */
/*    | ~lda~                  | ~int64_t~           | in     | Leading dimension of array ~A~                        | */
/*    | ~B~                    | ~double[][ldb]~     | in     | Array containing the $n \times 3$ matrix $B$          | */
/*    | ~ldb~                  | ~int64_t~           | in     | Leading dimension of array ~B~                        | */
/*    | ~C~                    | ~double[n][ldc][4]~ | out    | Array containing the $4 \times m \times n$ matrix $C$ | */
/*    | ~ldc~                  | ~int64_t~           | in     | Leading dimension of array ~C~                        | */
/*    | ~rescale_factor_kappa~ | ~double~            | in     | Factor for calculating rescaled distances derivatives | */

/*    Requirements: */

/*     - ~context~ is not ~QMCKL_NULL_CONTEXT~ */
/*     - ~m > 0~ */
/*     - ~n > 0~ */
/*     - ~lda >= 3~ if ~transa == 'N'~ */
/*     - ~lda >= m~ if ~transa == 'T'~ */
/*     - ~ldb >= 3~ if ~transb == 'N'~ */
/*     - ~ldb >= n~ if ~transb == 'T'~ */
/*     - ~ldc >= m~ */
/*     - ~A~ is allocated with at least $3 \times m \times 8$ bytes */
/*     - ~B~ is allocated with at least $3 \times n \times 8$ bytes */
/*     - ~C~ is allocated with at least $4 \times m \times n \times 8$ bytes */

/*     #+CALL: generate_c_header(table=qmckl_distance_rescaled_gl_args,rettyp=get_value("CRetType"),fname=get_value("Name")) */

/*     #+RESULTS: */

qmckl_exit_code qmckl_distance_rescaled_gl (
      const qmckl_context context,
      const char transa,
      const char transb,
      const int64_t m,
      const int64_t n,
      const double* A,
      const int64_t lda,
      const double* B,
      const int64_t ldb,
      double* const C,
      const int64_t ldc,
      const double rescale_factor_kappa );
/* /home/runner/work/qmckl/qmckl/_build/src/qmckl_jastrow_champ_func.h */
/* Initialization functions */

/*    To prepare for the Jastrow and its derivative, all the following functions need to be */
/*    called. */


qmckl_exit_code  qmckl_set_jastrow_champ_rescale_factor_ee (qmckl_context context, const double  kappa_ee);
qmckl_exit_code  qmckl_set_jastrow_champ_rescale_factor_en (qmckl_context context, const double* kappa_en, const int64_t size_max);
/* /home/runner/work/qmckl/qmckl/_build/src/qmckl_forces_func.h */
/* Get */



qmckl_exit_code
qmckl_get_forces_jastrow_en(qmckl_context context,
                                    double* const forces_jastrow_en,
                                    const int64_t size_max);
/* Get */



qmckl_exit_code
qmckl_get_forces_jastrow_en_g(qmckl_context context,
                                    double* const forces_jastrow_en_g,
                                    const int64_t size_max);
/* Get */



qmckl_exit_code
qmckl_get_forces_jastrow_en_l(qmckl_context context,
                                    double* const forces_jastrow_en_l,
                                    const int64_t size_max);
/* Get */


qmckl_exit_code
qmckl_get_forces_jastrow_single_en(qmckl_context context,
                          double* const forces_jastrow_single_en,
                          const int64_t size_max);
/* Get */



qmckl_exit_code
qmckl_get_forces_jastrow_een(qmckl_context context,
                                    double* const forces_jastrow_een,
                                    const int64_t size_max);
/* Get */

qmckl_exit_code
qmckl_get_forces_jastrow_een_g(qmckl_context context,
                                     double* const forces_jastrow_een_g,
                                     const int64_t size_max);
/* Get */

qmckl_exit_code
qmckl_get_forces_jastrow_een_l(qmckl_context context,
                                     double* const forces_jastrow_een_l,
                                     const int64_t size_max);
/* Get */


qmckl_exit_code
qmckl_get_forces_jastrow_single_een(qmckl_context context,
                          double* const forces_jastrow_single_een,
                          const int64_t size_max);
/* Get */


qmckl_exit_code
qmckl_get_forces_mo_value(qmckl_context context,
                          double* const forces_mo_value,
                          const int64_t size_max);
qmckl_exit_code
qmckl_get_forces_mo_value_inplace (qmckl_context context,
                                     double* const forces_mo_value,
                                     const int64_t size_max);
/* Get */


qmckl_exit_code
qmckl_get_forces_mo_g(qmckl_context context,
                          double* const forces_mo_g,
                          const int64_t size_max);
qmckl_exit_code
qmckl_get_forces_mo_g_inplace(qmckl_context context,
                              double* const forces_mo_g,
                              const int64_t size_max);
/* Get */


qmckl_exit_code
qmckl_get_forces_mo_l(qmckl_context context,
                          double* const forces_mo_l,
                          const int64_t size_max);