_build/include/qmckl_f.F90


    integer (qmckl_context), intent(in)  , value :: context
    character(c_char  ) , intent(in)  , value :: transa
    character(c_char  ) , intent(in)  , value :: transb
    integer (c_int64_t) , intent(in)  , value :: m
    integer (c_int64_t) , intent(in)  , value :: n
    integer (c_int64_t) , intent(in)  , value :: lda
    integer (c_int64_t) , intent(in)  , value :: ldb
    integer (c_int64_t) , intent(in)  , value :: ldc
    real    (c_double ) , intent(in)  , value :: rescale_factor_kappa
    real    (c_double ) , intent(in)          :: A(lda,*)
    real    (c_double ) , intent(in)          :: B(ldb,*)
    real    (c_double ) , intent(out)         :: C(ldc,n)

  end function qmckl_distance_rescaled
end interface



!  This function is more efficient when ~A~ and ~B~ are transposed.


! #+CALL: generate_f_interface(table=qmckl_distance_rescaled_gl_args,rettyp=get_value("FRetType"),fname=get_value("Name"))

! #+RESULTS:

interface
  integer(qmckl_exit_code) function qmckl_distance_rescaled_gl &
      (context, transa, transb, m, n, A, lda, B, ldb, C, ldc, rescale_factor_kappa) &
      bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none

    integer (qmckl_context), intent(in)  , value :: context
    character(c_char  ) , intent(in)  , value :: transa
    character(c_char  ) , intent(in)  , value :: transb
    integer (c_int64_t) , intent(in)  , value :: m
    integer (c_int64_t) , intent(in)  , value :: n
    integer (c_int64_t) , intent(in)  , value :: lda
    integer (c_int64_t) , intent(in)  , value :: ldb
    integer (c_int64_t) , intent(in)  , value :: ldc
    real    (c_double ) , intent(in)  , value :: rescale_factor_kappa
    real    (c_double ) , intent(in)          :: A(lda,*)
    real    (c_double ) , intent(in)          :: B(ldb,*)
    real    (c_double ) , intent(out)         :: C(4,ldc,n)

  end function qmckl_distance_rescaled_gl
end interface
interface
  integer(qmckl_exit_code) function qmckl_set_electron_num(context, alpha, beta) bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none

    integer (c_int64_t) , intent(in)  , value :: context
    integer (c_int64_t) , intent(in)  , value :: alpha
    integer (c_int64_t) , intent(in)  , value :: beta
  end function
end interface

interface
  integer(qmckl_exit_code) function qmckl_set_electron_coord(context, transp, walk_num, coord, size_max) bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none

    integer (c_int64_t) , intent(in)  , value :: context
    character(c_char)   , intent(in)  , value :: transp
    integer (c_int64_t) , intent(in)  , value :: walk_num
    real(c_double)      , intent(in)          :: coord(*)
    integer (c_int64_t) , intent(in)  , value :: size_max
  end function
end interface

interface
  integer(qmckl_exit_code) function qmckl_get_electron_coord(context, transp, coord, size_max) bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none

    integer (c_int64_t) , intent(in)  , value :: context
    character(c_char)   , intent(in)  , value :: transp
    real(c_double)      , intent(in)          :: coord(*)
    integer (c_int64_t) , intent(in)  , value :: size_max
  end function
end interface

interface
  integer(qmckl_exit_code) function qmckl_get_electron_ee_distance(context, distance, size_max) &
    bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none
    integer (c_int64_t) , intent(in)  , value :: context
    real    (c_double ) , intent(out)         :: distance(*)
    integer (c_int64_t) , intent(in)          :: size_max
  end function
end interface

interface
  integer(c_int32_t) function qmckl_get_electron_en_distance(context, distance, size_max) &
    bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none
    integer (c_int64_t) , intent(in)  , value :: context
    real    (c_double ) , intent(out)         :: distance(*)
    integer (c_int64_t) , intent(in)          :: size_max
  end function
end interface
interface
   subroutine qmckl_string_of_error (error, string) bind(C, name='qmckl_string_of_error_f')
     use, intrinsic :: iso_c_binding
     import
     implicit none
     integer (qmckl_exit_code), intent(in), value :: error
     character(c_char), intent(out) :: string(128)
   end subroutine qmckl_string_of_error
end interface

interface
   subroutine qmckl_last_error (context, string) bind(C, name='qmckl_last_error')
     use, intrinsic :: iso_c_binding
     import
     implicit none
     integer (c_int64_t) , intent(in), value :: context
     character(c_char), intent(out) :: string(*)
   end subroutine qmckl_last_error
end interface

interface
   function qmckl_check (context, rc) bind(C, name='qmckl_check')
     use, intrinsic :: iso_c_binding
     import
     implicit none
     integer(qmckl_exit_code) :: qmckl_check
     integer (c_int64_t) , intent(in), value :: context
     integer(qmckl_exit_code), intent(in), value :: rc
   end function qmckl_check
end interface
interface
   integer(qmckl_exit_code) function qmckl_get_forces_jastrow_en (context, &
        forces_jastrow_en, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none
     integer (qmckl_context) , intent(in), value :: context
     integer(c_int64_t), intent(in), value       :: size_max
     real(c_double),   intent(out)               :: forces_jastrow_en(size_max)
   end function qmckl_get_forces_jastrow_en
end interface

interface
   integer(qmckl_exit_code) function qmckl_get_forces_jastrow_en_g (context, &
        forces_jastrow_en_g, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none
     integer (qmckl_context) , intent(in), value :: context
     integer(c_int64_t), intent(in), value       :: size_max
     real(c_double),   intent(out)               :: forces_jastrow_en_g(size_max)
   end function qmckl_get_forces_jastrow_en_g
end interface

interface
   integer(qmckl_exit_code) function qmckl_get_forces_jastrow_en_l (context, &
        forces_jastrow_en_l, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none
     integer (qmckl_context) , intent(in), value :: context
     integer(c_int64_t), intent(in), value       :: size_max
     real(c_double),   intent(out)               :: forces_jastrow_en_l(size_max)
   end function qmckl_get_forces_jastrow_en_l
end interface

interface
   integer(qmckl_exit_code) function qmckl_get_forces_jastrow_single_en (context, &
        forces_jastrow_single_en, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none

     integer (c_int64_t) , intent(in)  , value :: context
     integer (c_int64_t) , intent(in)  , value :: size_max
     real(c_double),       intent(out)         :: forces_jastrow_single_en(size_max)
   end function qmckl_get_forces_jastrow_single_en
end interface

interface
   integer(qmckl_exit_code) function qmckl_get_forces_jastrow_een (context, &
        forces_jastrow_een, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none
     integer (qmckl_context) , intent(in), value :: context
     integer(c_int64_t), intent(in), value       :: size_max
     real(c_double),   intent(out)               :: forces_jastrow_een(size_max)
   end function qmckl_get_forces_jastrow_een
end interface

interface
   integer(qmckl_exit_code) function qmckl_get_forces_jastrow_een_g (context, &
        forces_jastrow_een_g, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none
     integer (qmckl_context) , intent(in), value :: context
     integer(c_int64_t), intent(in), value       :: size_max
     real(c_double),   intent(out)               :: forces_jastrow_een_g(size_max)
   end function qmckl_get_forces_jastrow_een_g
end interface

interface
   integer(qmckl_exit_code) function qmckl_get_forces_jastrow_een_l (context, &
        forces_jastrow_een_l, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none
     integer (qmckl_context) , intent(in), value :: context
     integer(c_int64_t), intent(in), value       :: size_max
     real(c_double),   intent(out)               :: forces_jastrow_een_l(size_max)
   end function qmckl_get_forces_jastrow_een_l
end interface

interface
   integer(qmckl_exit_code) function qmckl_get_forces_jastrow_single_een (context, &
        forces_jastrow_single_een, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none

     integer (c_int64_t) , intent(in)  , value :: context
     integer (c_int64_t) , intent(in)  , value :: size_max
     real(c_double),       intent(out)         :: forces_jastrow_single_een(size_max)
   end function qmckl_get_forces_jastrow_single_een
end interface

interface
   integer(qmckl_exit_code) function qmckl_get_forces_mo_value (context, &
        forces_mo_value, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none

     integer (c_int64_t) , intent(in)  , value :: context
     real(c_double),       intent(out)         :: forces_mo_value(*)
     integer (c_int64_t) , intent(in)  , value :: size_max
   end function qmckl_get_forces_mo_value
end interface

interface
   integer(qmckl_exit_code) function qmckl_get_forces_mo_value_inplace (context, &
        forces_mo_value, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none
     integer (c_int64_t) , intent(in)  , value :: context
     real(c_double),       intent(out)         :: forces_mo_value(*)
     integer (c_int64_t) , intent(in)  , value :: size_max
   end function qmckl_get_forces_mo_value_inplace
end interface

interface
   integer(qmckl_exit_code) function qmckl_get_forces_mo_g (context, &
        forces_mo_g, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none

     integer (c_int64_t) , intent(in)  , value :: context
     real(c_double),       intent(out)         :: forces_mo_g(*)
     integer (c_int64_t) , intent(in)  , value :: size_max
   end function qmckl_get_forces_mo_g
end interface

interface
   integer(qmckl_exit_code) function qmckl_get_forces_mo_g_inplace (context, &
        forces_mo_g, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none

     integer (c_int64_t) , intent(in)  , value :: context
     real(c_double),       intent(out)         :: forces_mo_g(*)
     integer (c_int64_t) , intent(in)  , value :: size_max
   end function qmckl_get_forces_mo_g_inplace
end interface

interface
   integer(qmckl_exit_code) function qmckl_get_forces_mo_l (context, &
        forces_mo_l, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none

     integer (c_int64_t) , intent(in)  , value :: context
     real(c_double),       intent(out)         :: forces_mo_l(*)
     integer (c_int64_t) , intent(in)  , value :: size_max
   end function qmckl_get_forces_mo_l
end interface
! Fortran interface


interface
   integer(qmckl_exit_code) function qmckl_set_jastrow_champ_rescale_factor_ee (context, &
        kappa_ee) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none
     integer (qmckl_context) , intent(in)  , value :: context
     real(c_double),   intent(in), value  :: kappa_ee
   end function qmckl_set_jastrow_champ_rescale_factor_ee

   integer(qmckl_exit_code) function qmckl_set_jastrow_champ_rescale_factor_en (context, &
        kappa_en, size_max) bind(C)
     use, intrinsic :: iso_c_binding
     import
     implicit none
     integer (qmckl_context) , intent(in)  , value :: context
     integer(c_int64_t), intent(in), value  :: size_max
     real(c_double),   intent(in) :: kappa_en(size_max)
   end function qmckl_set_jastrow_champ_rescale_factor_en
